projects/compiler/test/parser/invocation_error_no_comma.out
Error at %FILE_NAME%:1:7
Unexpected token 'identifier', expected one of ',', ')':
  |  a.b(1 abc)
           ^