projects/compiler/test/parser/invocation_error_no_comma.abra
a.b(1 abc)